--- a/src/application/view/funcionario.fxml
+++ b/src/application/view/funcionario.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="609.0" prefWidth="1062.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.view.formularioController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="609.0" prefWidth="1062.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.view.funcionarioController">
    <children>
       <SplitPane dividerPositions="0.2" layoutX="152.0" layoutY="91.0" prefHeight="609.0" prefWidth="1062.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <items>
@@ -44,11 +44,27 @@
                         <Button fx:id="btnSalvar" mnemonicParsing="false" prefHeight="25.0" prefWidth="62.0" text="Salvar" />
                      </children>
                   </HBox>
-                  <Label alignment="CENTER" layoutX="415.0" layoutY="45.0" text="Cadastro" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="50.0">
+                  <Label alignment="CENTER" layoutX="415.0" layoutY="45.0" text="Cadastro de Funcionário" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="50.0">
                      <font>
                         <Font name="System Bold" size="24.0" />
                      </font>
                   </Label>
+                  <TextField fx:id="txtNome" layoutX="43.0" layoutY="145.0" />
+                  <TextField fx:id="txtCPF" layoutX="225.0" layoutY="145.0" />
+                  <TextField fx:id="txtRG" layoutX="409.0" layoutY="145.0" />
+                  <TextField fx:id="txtCargo" layoutX="586.0" layoutY="145.0" />
+                  <TextField fx:id="txtSalario" layoutX="43.0" layoutY="201.0" />
+                  <TextField fx:id="txtUsuario" layoutX="225.0" layoutY="201.0" />
+                  <TextField fx:id="txtSenha" layoutX="409.0" layoutY="201.0" />
+                  <TextField fx:id="txtDataCadastro" layoutX="586.0" layoutY="201.0" />
+                  <Label layoutX="50.0" layoutY="118.0" text="Nome" />
+                  <Label layoutX="240.0" layoutY="118.0" text="Cpf" />
+                  <Label layoutX="409.0" layoutY="118.0" text="RG" />
+                  <Label layoutX="586.0" layoutY="118.0" text="Cargo" />
+                  <Label layoutX="50.0" layoutY="183.0" text="Salario" />
+                  <Label layoutX="240.0" layoutY="183.0" text="Usuario" />
+                  <Label layoutX="409.0" layoutY="183.0" text="Senha" />
+                  <Label layoutX="586.0" layoutY="183.0" text="Data cadastro" />
                </children>
             </AnchorPane>
         </items>
