cadastro de produto: model , dao e controller

--- a/src/application/view/principal.fxml
+++ b/src/application/view/principal.fxml
@@ -20,9 +20,15 @@
             <items>
               <MenuItem mnemonicParsing="false" onAction="#abrirJogo" text="Clientes" />
                   <MenuItem mnemonicParsing="false" onAction="#abrirFuncionario" text="Funcionários" />
-                  <MenuItem mnemonicParsing="false" text="Produtos" />
+                  <MenuItem mnemonicParsing="false" onAction="#abrirProduto" text="Produtos" />
             </items>
           </Menu>
+            <Menu mnemonicParsing="false" text="Operação">
+              <items>
+                <MenuItem mnemonicParsing="false" onAction="#abrirFrenteCaixa" text="Frente de Caixa" />
+                  <MenuItem mnemonicParsing="false" text="Processa Estoque" />
+              </items>
+            </Menu>
         </menus>
       </MenuBar>
       <AnchorPane fx:id="form" prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS" />
