--- a/src/application/view/produto.fxml
+++ b/src/application/view/produto.fxml
@@ -50,15 +50,17 @@
                      </font>
                   </Label>
                   <TextField fx:id="txtNome" layoutX="51.0" layoutY="160.0" prefHeight="26.0" prefWidth="233.0" />
-                  <TextField fx:id="txtData" layoutX="315.0" layoutY="228.0" prefHeight="26.0" prefWidth="174.0" />
-                  <TextField fx:id="txtPreco" layoutX="309.0" layoutY="160.0" prefHeight="26.0" prefWidth="93.0" />
-                  <TextField fx:id="txtEstoque" layoutX="438.0" layoutY="160.0" prefHeight="26.0" prefWidth="50.0" />
+                  <TextField fx:id="txtCodBarra" layoutX="301.0" layoutY="156.0" prefHeight="26.0" prefWidth="182.0" />
                   <TextField fx:id="txtDescricao" layoutX="51.0" layoutY="228.0" prefHeight="26.0" prefWidth="234.0" />
+                  <TextField fx:id="txtPreco" layoutX="309.0" layoutY="224.0" prefHeight="26.0" prefWidth="93.0" />
+                  <TextField fx:id="txtEstoque" layoutX="438.0" layoutY="224.0" prefHeight="26.0" prefWidth="50.0" />
+                  <TextField fx:id="txtData" layoutX="51.0" layoutY="294.0" prefHeight="26.0" prefWidth="174.0" />
                   <Label layoutX="51.0" layoutY="141.0" text="Nome" />
-                  <Label layoutX="309.0" layoutY="141.0" text="Preço" />
-                  <Label layoutX="442.0" layoutY="141.0" text="Estoque" />
-                  <Label layoutX="51.0" layoutY="210.0" text="Descricção" />
-                  <Label layoutX="315.0" layoutY="209.0" text="Data Cadastro" />
+                  <Label layoutX="309.0" layoutY="205.0" text="Preço" />
+                  <Label layoutX="442.0" layoutY="205.0" text="Estoque" />
+                  <Label layoutX="51.0" layoutY="210.0" text="Descrição" />
+                  <Label layoutX="51.0" layoutY="275.0" text="Data Cadastro" />
+                  <Label layoutX="305.0" layoutY="137.0" text="Código de Barras" />
                </children>
             </AnchorPane>
         </items>
