--- a/src/application/view/login.fxml
+++ b/src/application/view/login.fxml
@@ -1,15 +1,48 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIcon?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.view.loginController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #DCDCDC;" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.view.loginController">
    <children>
-      <TextField fx:id="txtUsuario" layoutX="189.0" layoutY="113.0" prefHeight="26.0" prefWidth="248.0" />
-      <PasswordField fx:id="txtSenha" layoutX="189.0" layoutY="175.0" prefHeight="26.0" prefWidth="248.0" />
-      <Button fx:id="btnFechar" layoutX="212.0" layoutY="237.0" mnemonicParsing="false" text="Fechar" />
-      <Button fx:id="btnEntrar" layoutX="352.0" layoutY="237.0" mnemonicParsing="false" text="Entrar" />
+      <TextField fx:id="txtUsuario" layoutX="183.0" layoutY="198.0" prefHeight="26.0" prefWidth="248.0" promptText="Digite seu usuario" />
+      <PasswordField fx:id="txtSenha" layoutX="183.0" layoutY="260.0" prefHeight="26.0" prefWidth="248.0" promptText="Digite sua senha" />
+      <Button fx:id="btnFechar" layoutX="187.0" layoutY="320.0" minHeight="30.0" mnemonicParsing="false" prefWidth="100.0" text="Fechar">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></Button>
+      <Button fx:id="btnEntrar" layoutX="327.0" layoutY="320.0" minHeight="30.0" mnemonicParsing="false" prefWidth="100.0" text="Entrar">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></Button>
+      <ImageView fitHeight="47.0" fitWidth="187.0" layoutX="199.0" layoutY="66.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../../../Downloads/senai_2.png" />
+         </image>
+      </ImageView>
+      <Label layoutX="187.0" layoutY="180.0" text="Usuário">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Label>
+      <Label layoutX="187.0" layoutY="242.0" text="Senha">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Label>
+      <Label layoutX="246.0" layoutY="129.0" text="Seja Bem Vindo.">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+      </Label>
+      <FontAwesomeIcon glyphName="USER" layoutX="131.0" layoutY="219.0" size="3em" />
+      <FontAwesomeIcon glyphName="LOCK" layoutX="131.0" layoutY="281.0" size="3em" />
    </children>
 </AnchorPane>
