--- a/src/application/view/produto.fxml
+++ b/src/application/view/produto.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.SplitPane?>
@@ -61,6 +62,7 @@
                   <Label layoutX="51.0" layoutY="210.0" text="Descrição" />
                   <Label layoutX="51.0" layoutY="275.0" text="Data Cadastro" />
                   <Label layoutX="305.0" layoutY="137.0" text="Código de Barras" />
+                  <DatePicker fx:id="dtCadastro" disable="true" layoutX="237.0" layoutY="295.0" />
                </children>
             </AnchorPane>
         </items>
