--- a/src/application/view/cliente.fxml
+++ b/src/application/view/cliente.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.SplitPane?>
@@ -57,8 +58,9 @@
                   <Label layoutX="388.0" layoutY="111.0" text="CPF" />
                   <Label layoutX="59.0" layoutY="168.0" text="Email" />
                   <Label layoutX="384.0" layoutY="168.0" text="Telefone" />
-                  <TextField fx:id="txtDataCadastro" layoutX="59.0" layoutY="250.0" />
+                  <TextField fx:id="txtDataCadastro" layoutX="388.0" layoutY="247.0" visible="false" />
                   <Label layoutX="59.0" layoutY="229.0" text="Data Cadastro" />
+                  <DatePicker fx:id="dtCadastro" disable="true" layoutX="59.0" layoutY="254.0" />
                </children>
             </AnchorPane>
         </items>
