--- a/src/application/view/frenteCaixa.fxml
+++ b/src/application/view/frenteCaixa.fxml
@@ -115,7 +115,7 @@
                         </AnchorPane>
                       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                            <children>
-                              <TableView fx:id="tabItemPedido" layoutX="-12.0" layoutY="14.0" prefHeight="307.0" prefWidth="176.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                              <TableView fx:id="tabItemPedido" layoutX="-12.0" layoutY="14.0" prefHeight="307.0" prefWidth="176.0" style="-fx-font-size: 16;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                 <columns>
                                   <TableColumn fx:id="colCodBarra" prefWidth="55.0" text="Cód." />
                                   <TableColumn fx:id="colDescricao" prefWidth="200.0" text="Descrição" />
@@ -137,17 +137,17 @@
                <children>
                   <HBox alignment="BOTTOM_LEFT" prefHeight="91.0" prefWidth="465.0" spacing="5.0" HBox.hgrow="ALWAYS">
                      <children>
-                        <Button mnemonicParsing="false" prefHeight="95.0" prefWidth="95.0" text="F1            Novo            Pedido" textAlignment="CENTER" wrapText="true" HBox.hgrow="ALWAYS">
+                        <Button mnemonicParsing="false" onAction="#inserirPedido" prefHeight="95.0" prefWidth="95.0" text="F1            Novo            Pedido" textAlignment="CENTER" wrapText="true" HBox.hgrow="ALWAYS">
                            <font>
                               <Font name="System Bold" size="12.0" />
                            </font>
                         </Button>
-                        <Button mnemonicParsing="false" prefHeight="95.0" prefWidth="95.0" text="F2           Inserir            Item" textAlignment="CENTER" wrapText="true">
+                        <Button mnemonicParsing="false" onAction="#inserirItem" prefHeight="95.0" prefWidth="95.0" text="F2           Inserir            Item" textAlignment="CENTER" wrapText="true">
                            <font>
                               <Font name="System Bold" size="12.0" />
                            </font>
                         </Button>
-                        <Button mnemonicParsing="false" prefHeight="95.0" prefWidth="95.0" text="F3          Pesquisar Produto" textAlignment="CENTER" wrapText="true">
+                        <Button mnemonicParsing="false" onAction="#buscaProduto" prefHeight="95.0" prefWidth="95.0" text="F3          Pesquisar Produto" textAlignment="CENTER" wrapText="true">
                            <font>
                               <Font name="System Bold" size="12.0" />
                            </font>
