--- a/src/application/view/funcionario.fxml
+++ b/src/application/view/funcionario.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.SplitPane?>
@@ -56,7 +57,7 @@
                   <TextField fx:id="txtSalario" layoutX="43.0" layoutY="201.0" />
                   <TextField fx:id="txtUsuario" layoutX="225.0" layoutY="201.0" />
                   <TextField fx:id="txtSenha" layoutX="409.0" layoutY="201.0" />
-                  <TextField fx:id="txtDataCadastro" layoutX="586.0" layoutY="201.0" />
+                  <TextField fx:id="txtDataCadastro" layoutX="43.0" layoutY="250.0" visible="false" />
                   <Label layoutX="50.0" layoutY="118.0" text="Nome" />
                   <Label layoutX="240.0" layoutY="118.0" text="Cpf" />
                   <Label layoutX="409.0" layoutY="118.0" text="RG" />
@@ -65,6 +66,7 @@
                   <Label layoutX="240.0" layoutY="183.0" text="Usuario" />
                   <Label layoutX="409.0" layoutY="183.0" text="Senha" />
                   <Label layoutX="586.0" layoutY="183.0" text="Data cadastro" />
+                  <DatePicker fx:id="dtCadastro" disable="true" layoutX="586.0" layoutY="201.0" prefWidth="175.0" />
                </children>
             </AnchorPane>
         </items>
