--- a/src/application/view/produto.fxml
+++ b/src/application/view/produto.fxml
@@ -55,14 +55,14 @@
                   <TextField fx:id="txtDescricao" layoutX="51.0" layoutY="228.0" prefHeight="26.0" prefWidth="234.0" />
                   <TextField fx:id="txtPreco" layoutX="309.0" layoutY="224.0" prefHeight="26.0" prefWidth="93.0" />
                   <TextField fx:id="txtEstoque" layoutX="438.0" layoutY="224.0" prefHeight="26.0" prefWidth="50.0" />
-                  <TextField fx:id="txtData" layoutX="51.0" layoutY="294.0" prefHeight="26.0" prefWidth="174.0" />
+                  <TextField fx:id="txtData" layoutX="438.0" layoutY="294.0" prefHeight="26.0" prefWidth="174.0" visible="false" />
                   <Label layoutX="51.0" layoutY="141.0" text="Nome" />
                   <Label layoutX="309.0" layoutY="205.0" text="Preço" />
                   <Label layoutX="442.0" layoutY="205.0" text="Estoque" />
                   <Label layoutX="51.0" layoutY="210.0" text="Descrição" />
                   <Label layoutX="51.0" layoutY="275.0" text="Data Cadastro" />
                   <Label layoutX="305.0" layoutY="137.0" text="Código de Barras" />
-                  <DatePicker fx:id="dtCadastro" disable="true" layoutX="237.0" layoutY="295.0" />
+                  <DatePicker fx:id="dtCadastro" disable="true" layoutX="51.0" layoutY="294.0" />
                </children>
             </AnchorPane>
         </items>
